--- a/app/src/main/res/layout/fragment_task_add_edit.xml
+++ b/app/src/main/res/layout/fragment_task_add_edit.xml
@@ -81,6 +81,21 @@
                     app:iconLeft="@drawable/ic_today_white"
                     app:floatingLabel="highlight"
                     app:iconPadding="10dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0% complete"
+                    android:id="@+id/txtTaskProgress"
+                    android:layout_gravity="left|center_horizontal"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="20dp"
+                    android:gravity="left" />
+
+                <SeekBar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBar"
+                    android:max="100"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -104,6 +119,7 @@
                     app:iconLeft="@drawable/ic_today_white"
                     app:floatingLabel="highlight"
                     app:iconPadding="10dp" />
+
 
             </LinearLayout>
         </ScrollView>
