--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -2,13 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    >
     <LinearLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
         android:background="@android:color/white">
 
         <LinearLayout
@@ -16,16 +14,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?colorPrimary"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingBottom="16dp"
-            android:paddingLeft="72dp"
+            android:paddingLeft="45dp"
             android:paddingRight="16dp"
             android:elevation="5dp"
             android:paddingTop="16dp">
 
             <com.rengwuxian.materialedittext.MaterialEditText
                 android:id="@+id/txtTaskSubject"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/task_subject_hint"
                 android:textCursorDrawable="@drawable/text_cursor"
@@ -36,15 +34,27 @@
                 app:primaryColor="@color/colorAccent"
                 app:singleLineEllipsis="true" />
 
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtTaskType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/task_type_hint"
+                android:textCursorDrawable="@drawable/text_cursor"
+                android:textSize="30sp"
+                app:baseColor="@android:color/white"
+                app:floatingLabel="highlight"
+                app:maxCharacters="20"
+                app:primaryColor="@color/colorAccent"
+                app:singleLineEllipsis="true" />
 
         </LinearLayout>
-
-        <include
-            android:id="@+id/shadow_main_activity"
-            layout="@layout/toolbar_shadow" />
+        <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
 
 
-        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+        <ScrollView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbarStyle="outsideInset">
@@ -61,19 +71,13 @@
                 android:paddingTop="@dimen/activity_vertical_margin">
 
 
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/txtTaskType"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/task_type_hint"
-                    app:floatingLabel="highlight" />
 
                 <com.rengwuxian.materialedittext.MaterialEditText
                     android:id="@+id/txtTaskName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/task_name"
-                    app:floatingLabel="highlight" />
+                    app:floatingLabel="highlight"/>
 
                 <View
                     android:id="@+id/viewDivider1"
@@ -82,8 +86,8 @@
                     android:background="#878787"
                     android:layout_below="@+id/txtTaskName"
                     android:layout_alignLeft="@+id/titleTextView"
-                    android:layout_alignStart="@+id/titleTextView" />
-
+                    android:layout_alignStart="@+id/titleTextView"
+                    />
                 <com.rengwuxian.materialedittext.MaterialEditText
                     android:id="@+id/txtTaskDueDate"
                     android:layout_width="match_parent"
@@ -101,20 +105,21 @@
                     android:layout_below="@+id/txtTaskDueDate"
                     android:layout_alignLeft="@+id/titleTextView"
                     android:layout_alignStart="@+id/titleTextView" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0% complete"
                     android:id="@+id/txtTaskProgress"
+                    android:layout_gravity="left|center_horizontal"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="25dp"
                     android:gravity="left" />
-
                 <SeekBar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/seekBar"
                     android:max="100"
-                    android:progress="0"
-                    android:id="@+id/seekBar" />
+                    />
 
                 <View
                     android:id="@+id/viewDivider3"
@@ -123,21 +128,25 @@
                     android:background="#878787"
                     android:layout_below="@+id/txtTaskName"
                     android:layout_alignLeft="@+id/titleTextView"
-                    android:layout_alignStart="@+id/titleTextView" />
-
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/txtTaskDetail"
-                    android:layout_width="match_parent"
+                    android:layout_alignStart="@+id/titleTextView"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/txtTaskDetail"
+                    android:layout_gravity="left|center_horizontal"
                     android:hint="@string/task_detail_hint"
-                    app:iconLeft="@drawable/ic_today_white"
-                    app:floatingLabel="highlight"
-                    app:iconPadding="10dp" />
+                    android:textSize="20sp"
+                    android:paddingTop="20dp"
+                    android:paddingLeft="10dp"
+                    android:gravity="left" />
 
             </LinearLayout>
         </ScrollView>
 
     </LinearLayout>
+
+
 
 
 </RelativeLayout>
